# docforge

./: .gitignore  README.md  cpp_doc_generator.py  example_usage.py  requirements.txt
test_cpp_project/: CMakeLists.txt  README.md
test_cpp_project/include/: calculator.h  data_structures.h  memory_manager.h
test_cpp_project/src/: calculator.cpp  main.cpp
test_cpp_project/tests/: test_calculator.cpp
